# imperal-article-writer-extension

./: .gitignore  IMPERAL_SDK_COMPLETE_REFERENCE.md  README.md  api_client.py  api_seranking.py  api_wordpress.py  app.py  cache_helpers.py  handlers_ai_extra.py  handlers_ai_write.py  handlers_articles.py  handlers_content.py  handlers_docs.py  handlers_edit.py  handlers_generate.py  handlers_keywords.py  handlers_nav.py  handlers_projects.py  handlers_publish.py  handlers_seo.py  imperal.json  main.py  manifest.json  navstate.py  panels_article_info.py  panels_docs.py  panels_editor.py  panels_editor_helpers.py  panels_editor_newsletter.py  panels_right.py  panels_settings_view.py  panels_side.py  panels_workspace.py  params.py  pyproject.toml  response_models.py  richtext.py  skeleton.py  wpb_app.py
docs/: extension.md
tests/: test_cache_helpers.py  test_edit.py  test_handlers.py  test_params.py  test_plan.py  test_publish.py  test_richtext.py  test_seo.py  test_skeleton.py
