[project]
name = "article-writer"
version = "1.5.3"
description = "Article Writer — AI-powered WordPress content creation: keyword research, rankings, article writing and one-click publishing"
requires-python = ">=3.11"
dependencies = ["imperal-sdk>=5.0.1"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.setuptools]
py-modules = [
    "main", "wpb_app", "params",
    "api_client", "api_seranking", "api_wordpress",
    "handlers_nav", "handlers_content", "handlers_seo", "handlers_publish", "handlers_docs",
    "handlers_ai_write", "handlers_ai_extra", "handlers_keywords",
    "panels_side", "panels_right", "panels_workspace", "panels_editor",
    "panels_editor_helpers", "panels_editor_newsletter",
    "panels_settings_view", "panels_docs", "skeleton",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
