[project]
name = "article-writer"
version = "2.5.0"
description = "Article Writer — project-based SEO article writing: per-site context, AI generation with grounded self-review, panel-only editing"
requires-python = ">=3.11"
dependencies = ["imperal-sdk>=5.9.9"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.setuptools]
py-modules = [
    "main", "app", "params", "response_models",
    "api_client", "richtext", "navstate", "skeleton",
    "handlers_projects", "handlers_articles", "handlers_generate", "handlers_edit",
    "panels_side", "panels_workspace",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
